Feature/mk groups comunication to other services (#71)
* controller change
* swagger jwt option
* communication to other services
* remove test database

--- a/Groups/src/main/resources/application.properties
+++ b/Groups/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
 
 hibernate.hbm2ddl.auto=none
 
@@ -7,6 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/Groups
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
+
+#TODO -> w celu debuggowania, po skonczeniu prac mozna usunac
+jwt.secret=${JwtSecret:Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e}
+application.context=${APPLICATION_CONTEXT:local}
 
 spring.liquibase.change-log=databaseChangeLog.xml
 
