--- a/Groups/build.gradle
+++ b/Groups/build.gradle
@@ -15,16 +15,20 @@ repositories {
 dependencies {
 	// core
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// core-test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//testImplementation 'org.springframework.security:spring-security-test'
 
 	// databases
 	runtimeOnly 'org.postgresql:postgresql'
-	implementation 'com.h2database:h2:2.1.214'
 
 	// additional
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11' // swagger
 	implementation 'org.liquibase:liquibase-core:4.16.1' // liquibase
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.1' // jwt
 }
 
 tasks.named('test') {
