Broadcast message about deleted Permission and terminated TrainerEmployment (#121)
* register production exchange

* send queue message

* fix exchange names

* send broadcast when deleting permission

* add exchange configuration

* update broker description

* assign receivers

Co-authored-by: Mikołaj Macioszczyk <macioszczyk@vialutions.com>

--- a/Carnets/Carnets.API/appsettings.Development.json
+++ b/Carnets/Carnets.API/appsettings.Development.json
@@ -24,7 +24,7 @@
       "UserName": "muscleUp",
       "Password": "Pa55w0rd"
     },
-    "Exchange": {
+    "MembershipProductionExchange": {
       "Type": "direct",
       "Durable": true,
       "AutoDelete": false,
@@ -34,6 +34,19 @@
         {
           "Name": "memberships",
           "RoutingKeys": [ "memberships" ]
+        }
+      ]
+    },
+    "DeletedPermissionProductionExchange": {
+      "Type": "direct",
+      "Durable": true,
+      "AutoDelete": false,
+      "DeadLetterExchange": "default.dlx.exchange",
+      "RequeueFailedMessages": true,
+      "Queues": [
+        {
+          "Name": "deletedPermission",
+          "RoutingKeys": [ "deletedPermission" ]
         }
       ]
     }
