--- a/FitnessClubs/FitnessClubs.API/appsettings.Development.json
+++ b/FitnessClubs/FitnessClubs.API/appsettings.Development.json
@@ -19,7 +19,7 @@
       "UserName": "muscleUp",
       "Password": "Pa55w0rd"
     },
-    "Exchange": {
+    "ConsumptionExchange": {
       "Type": "direct",
       "Durable": true,
       "AutoDelete": false,
@@ -29,6 +29,19 @@
         {
           "Name": "memberships",
           "RoutingKeys": [ "memberships" ]
+        }
+      ]
+    },
+    "ProductionExchange": {
+      "Type": "direct",
+      "Durable": true,
+      "AutoDelete": false,
+      "DeadLetterExchange": "default.dlx.exchange",
+      "RequeueFailedMessages": true,
+      "Queues": [
+        {
+          "Name": "terminatedEmployment",
+          "RoutingKeys": [ "terminatedEmployment" ]
         }
       ]
     }
