Feature/mk add, update and delete schedule cells + entity refactor (#122)
* Start scheduleCellForm validation

* SingleUpdate

* Fix cell save error

* End update with bug

* Move fields to GroupWorkout.java

* Create repeatable groupWorkouts

* Chyba działa

* Cascade update

* Add test data

* Fix

* Fix

* Delete endpoint

* Cleanup

* Change example data

* Fix

* Combine 2 updates

* Fix

* Fix

* Update endpoint description

* Typoo

* TODOs

* FUTURE_CREATIONS as environment variable

* Separate ScheduleCell-ScheduleCellForm comparison

* docker-compose change

--- a/Groups/src/main/resources/application.properties
+++ b/Groups/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
 #TODO -> w celu debuggowania, po skonczeniu prac mozna usunac
 jwt.secret=${JwtSecret:Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e}
 application.context=${APPLICATION_CONTEXT:local}
+future.creations=${FUTURE_GROUP_CREATIONS:2}
 
 spring.liquibase.change-log=databaseChangeLog.xml
 
