--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -94,6 +94,7 @@ services:
       - DATASOURCE_USERNAME=postgres
       - DATASOURCE_PASSWORD=Pa55w0rd
       - APPLICATION_CONTEXT=prod
+      - FUTURE_GROUP_CREATIONS=2
       - JwtSecret
     depends_on:
       - postgres
