Feature/mk workout and body part entities with crud (#124)

--- a/Content/src/main/resources/application.properties
+++ b/Content/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.show-sql=true
-spring.jpa.show-sql=true
 
+hibernate.hbm2ddl.auto=none
+
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/Content
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
 
+#TODO -> w celu debuggowania, po skonczeniu prac mozna usunac
+jwt.secret=${JwtSecret:Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e}
+application.context=${APPLICATION_CONTEXT:local}
+
 spring.liquibase.change-log=databaseChangeLog.xml
+
+entitymanager.packagesToScan=content
