--- a/Content/build.gradle
+++ b/Content/build.gradle
@@ -15,15 +15,25 @@ repositories {
 dependencies {
 	// core
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	// databases
+	// core-test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//testImplementation 'org.springframework.security:spring-security-test'
+
+	// database
 	runtimeOnly 'org.postgresql:postgresql'
 
-	// additional
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11' // swagger
-	implementation 'org.liquibase:liquibase-core:4.16.1' // liquibase
+	// liquibase
+	implementation 'org.liquibase:liquibase-core:4.16.1'
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+
+	// json mapper
+	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
+	//implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
 }
 
 tasks.named('test') {
