--- a/Auth/Auth.API/appsettings.Development.json
+++ b/Auth/Auth.API/appsettings.Development.json
@@ -9,5 +9,9 @@
     "AccessExpirationMinutes": "30",
     "RefreshExpirationMinutes": "1440"
   },
-  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e"
+  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e",
+  "Facebook": {
+    "AppId": "846092459753603",
+    "AppSecret": "92e8422a78eaeee9e9d79b692a5c02a3"
+  }
 }
