--- a/Groups/build.gradle
+++ b/Groups/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	// json mapper
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
+
+	// quartz
+	implementation 'org.quartz-scheduler:quartz:2.3.2'
 }
 
 tasks.named('test') {
