--- a/FitnessClubs/FitnessClubs.API/appsettings.Development.json
+++ b/FitnessClubs/FitnessClubs.API/appsettings.Development.json
@@ -9,8 +9,19 @@
     "DefaultConnection": "Server=localhost;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;"
   },
   "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e",
+  "InvitationValidityInDays": 30,
   "Api": {
     "AuthHost": "http://localhost:8080/api/auth/"
+  },
+  "SmtpSettings": {
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587,
+    "Username": "hello-muscle-up@outlook.com",
+    "Password": "123Pa$$word."
+  },
+  "EmailSettings": {
+    "FromName": "Muscle Up",
+    "FromAddress": "hello-muscle-up@outlook.com"
   },
   "Broker": {
     "Host": {
