--- a/Content/build.gradle
+++ b/Content/build.gradle
@@ -16,11 +16,9 @@ dependencies {
 	// core
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// core-test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//testImplementation 'org.springframework.security:spring-security-test'
 
 	// database
 	runtimeOnly 'org.postgresql:postgresql'
@@ -31,9 +29,8 @@ dependencies {
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 
-	// json mapper
-	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
-	//implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
+	// auth0 - jwt
+	implementation 'com.auth0:java-jwt:4.2.1'
 }
 
 tasks.named('test') {
