Architecture change - Infrastracture layer (#158)
* rename Repo to Infrastracture

* Move Stripe logic to infrastracture

Co-authored-by: Mikołaj Macioszczyk <macioszczyk@vialutions.com>

--- a/Auth/Auth.API/Auth.API.csproj
+++ b/Auth/Auth.API/Auth.API.csproj
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Common\Common.csproj" />
-    <ProjectReference Include="..\Auth.Repo\Auth.Repo.csproj" />
+    <ProjectReference Include="..\Auth.Repo\Auth.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
