--- a/FitnessClubs/FitnessClubs.API/Dockerfile
+++ b/FitnessClubs/FitnessClubs.API/Dockerfile
@@ -12,7 +12,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj", "FitnessClubs/FitnessClubs.API/"]
 COPY ["Common/Common/Common.csproj", "Common/Common/"]
-COPY ["FitnessClubs/FitnessClubs.Repo/FitnessClubs.Repo.csproj", "FitnessClubs/FitnessClubs.Repo/"]
+COPY ["FitnessClubs/FitnessClubs.Repo/FitnessClubs.Infrastructure.csproj", "FitnessClubs/FitnessClubs.Repo/"]
 COPY ["FitnessClubs/FitnessClubs.Domain/FitnessClubs.Domain.csproj", "FitnessClubs/FitnessClubs.Domain/"]
 RUN dotnet restore "FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj"
 COPY . .
