--- a/Tests/CarnetsTests/CarnetsTests.csproj
+++ b/Tests/CarnetsTests/CarnetsTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.16" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
@@ -24,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Carnets\Carnets.API\Carnets.API.csproj" />
     <ProjectReference Include="..\..\Carnets\Carnets.Application\Carnets.Application.csproj" />
     <ProjectReference Include="..\..\Carnets\Carnets.Repo\Carnets.Infrastructure.csproj" />
   </ItemGroup>
