remove settings variables

--- a/FitnessClubs/FitnessClubs.API/appsettings.Development.json
+++ b/FitnessClubs/FitnessClubs.API/appsettings.Development.json
@@ -17,7 +17,7 @@
     "Host": "smtp-mail.outlook.com",
     "Port": 587,
     "Username": "hello-muscle-up@outlook.com",
-    "Password": "123Pa$$word."
+    "Password": ""
   },
   "EmailSettings": {
     "FromName": "Muscle Up",
